--- a/genetic-algorithm/index.html
+++ b/genetic-algorithm/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
   <meta charset="UTF-8">
+  <meta name=”viewport” content=”width=960">
   <title>genetic-algorithm</title>
+  <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
   <canvas id="canvas" width="960" height="540" style="background: black"></canvas>
