--- a/life-game/index.html
+++ b/life-game/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
   <meta charset="UTF-8">
+  <meta name=”viewport” content=”width=device-width">
   <title>game of life</title>
+  <meta name=”viewport” content=”width=960">
+  <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
-  <canvas id="canvas" width="720" height="400"></canvas>
+  <canvas id="canvas" width="960" height="540"></canvas>
 
   <script>
     const canvas = document.querySelector("canvas");
